@@ -1,5 +1,8 @@
 Changes with APR-util b1  
 
+  *) Fix apr_brigade_vprintf so that it can handle more than
+     4k of data at one time.  [Cody Sherr <csherr@covalent.net>]
+
   *) prefix UNP_* flags with APR_URI_
 
      rename:
